--- a/mbti/style.css
+++ b/mbti/style.css
@@ -233,9 +233,10 @@ button:disabled {
   }
 
   .scale-btn {
-    font-size: 18px;
-    padding: 14px 18px;
-    margin-bottom: 14px;
-    border-radius: 14px;
+    font-weight: bold;
+    font-size: 15px;
+    padding: 13px 10px;
+    margin-bottom: 12px;
+    border-radius: 12px;
   }
 }
